unpackaged/main/default/objects/project_cloud__Quick_Allocation__c/project_cloud__Quick_Allocation__c.object-meta.xml
<CustomObject>
    <label>Quick Allocation</label>
    <nameField>
        <displayFormat>QA-{0000000000}</displayFormat>
        <label>Quick Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quick Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>