unpackaged/main/default/objects/project_cloud__Quick_Allocation__c/fields/project_cloud__Load_Override__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Load_Override__c</fullName>
    <label>Load (Override)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>