unpackaged/main/default/objects/project_cloud__Quick_Allocation__c/fields/project_cloud__Project__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project__c</fullName>
    <inlineHelpText>The Project that the Quick Allocation is related to</inlineHelpText>
    <label>Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Quick Allocations</relationshipLabel>
    <relationshipName>Quick_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>