unpackaged/main/default/objects/project_cloud__Quick_Allocation__c/fields/project_cloud__User__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user who has been Quick Allocated</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quick_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>