unpackaged/main/default/objects/project_cloud__Quick_Allocation__c/fields/project_cloud__Work_Type__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Work_Type__c</fullName>
    <inlineHelpText>The parent Work Type of the Quick Allocation</inlineHelpText>
    <label>Work Type</label>
    <referenceTo>project_cloud__Work_Type__c</referenceTo>
    <relationshipLabel>Quick Allocations</relationshipLabel>
    <relationshipName>Quick_Allocations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>